--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-	"name": "ssdp",
+	"name": "network-interfaces-async",
+	"type": "module",
+	"esm": true,
 	"version": "1.0.0",
-	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://archive.eldergods.com/ssdp"
+		"url": "https://archive.eldergods.com/network-interfaces-async"
 	},
-	"keywords": [],
+	"keywords": ["network interfaces", "netif", "interfaces"],
 	"author": "jauntywunderkind",
 	"license": "MIT",
-	"module": "ssdp.js",
-	"esm": true,
-	"@std/esm": {
-		"cjs": {
-			"namedExports": true
-		}
-	},
+	"main": "network-interfaces-async.js",
+	"module": "network-interfaces-async.js",
 	"dependencies": {
-		"async-iter-static": "^1.0.1",
-		"continua": "^1.0.0",
-		"deferrant": "^1.2.2",
-		"node-fetch": "^2.3.0"
+		"continua": "^1.0.0"
 	},
 	"devDependencies": {
 		"esm": "^3.2.18"
 	},
-	"description": ""
+	"description": "Streaming alternative to os.networkInterfaces()"
 }
